feat: add favicon for website

--- a/backend/web/website/index.html
+++ b/backend/web/website/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Oats</title>
+    <link rel="icon" type="image/x-icon" href="static/images/favicon.svg">
     <link rel="stylesheet" href="static/css/index.css">
 </head>
 <body>
