feat(backend): implement proper sending

--- a/backend/internal/intervention/template_user_html_email.html
+++ b/backend/internal/intervention/template_user_html_email.html
@@ -29,7 +29,7 @@
         {{ range .Rules }}
         <tr>
             <td>
-                <h4 style="text-align: center">[{{ .ClassCode }}, {{ .ClassYear }}/{{ .ClassSemester }}] {{ .Title }}</h4>
+                <p style="text-align: center;font-weight: bold;">[{{ .ClassCode }}, {{ .ClassYear }}/{{ .ClassSemester }}] {{ .Title }}</p>
                 <i>Description:</i>
                 <br/>
                 {{ .Description }}
